<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileIndia</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login_text_box">Login</string>
    <string name="browse_button_text">Browse</string>
    <string name="title_activity_city_select">City</string>
    <string name="title_activity_categories">Categories</string>
    <string name="housing_button_description">Housing</string>
    <string name="job_button_description">Jobs</string>
    <string name="forsale_button_description">For Sale</string>
    <string name="shopping_button_description">Shopping</string>
    <string name="travel_button_description">Travel</string>
    <string name="misc_button_description">Miscellaneous</string>
    <string name="CityHeader">City</string>
    <string name="City_button">City</string>
    <string name="create_user_button_text">Sign Up</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="SignUpButtonSubmitText">Sign Up</string>
    <string name="PhoneFieldHint">Phone Number</string>
    <string name="PasswordConfirmHint">Retype Password</string>
    <string name="PasswordHint">Password</string>
    <string name="EmailHint">Email</string>
    <string name="title_activity_categories2">Categories</string>
    <string name="CategoriesHeader">Categories</string>
    <string name="create_user_progress_signing_in">Creating User and Signing in</string>
    <string name="UsernameHint">Username</string>
    <string name="title_activity_locate_me">LocateMeActivity</string>
    <string name="title_activity_list_view_category">ListViewCategory</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_item">Add Post</string>
    <string name="title_activity_add__post">Add_Post</string>
    <string name="author_add_post">Enter your name</string>
    <string name="title_add_post">Enter a Title</string>
    <string name="summary_add_post">Provide a summary</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="user_label_string"></string>
    <string name="login_submit_button">Sign in</string>
    <string name="title_activity_single_post_view">SinglePostView</string>
    <string name="title_activity_post_list">PostList</string>
    <string name="title_activity_single__post">Single_Post</string>
    <string name="title_activity_add__comment">Add_Comment</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_sms">SMSActivity</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="logged_in_user_posts_button">Your Posts</string>
    <string name="search_post_button_label">Search Posts</string>
    <string name="title_activity_search_post">SearchPostActivity</string>
    <string name="search_post_label">Search Posts</string>
    <string name="search_post_button_text">Search</string>
    <string name="search_post_number_hint">Post Number #</string>
    <string name="post_date_hint">Post Date</string>
    <string name="post_keywords_hint">Post Keywords (comma separated)</string>
    <string name="post_author_hint">Post Author</string>
	<string name="btnDelhi_Text">Delhi</string>
    <string name="btnMumbai_Text">Mumbai</string>
    <string name="btnKolkata_Text">Kolkata</string>
    <string name="btnChennai_Text">Chennai</string>
    <string name="btnBanglore_Text">Banglore</string>
    <string name="btnPune_Text">Pune</string>
    <string name="btnNagpur_Text">Nagpur</string>
    <string name="btnIndore_Text">Indore</string>
    <string name="btnJaipur_Text">Jaipur</string>
    <string name="btnKanpur_Text">Kanpur</string>
    <string name="btnLocMe_Text">View Map</string>
    <string name="date_picker_search_button">Pick Date</string>
</resources>
