<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categories" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:orientation="vertical" >
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_toRightOf="@+id/linearLayout1"
        android:src="@android:drawable/btn_star_big_off" android:contentDescription="@string/housing_button_description"/>

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_alignTop="@+id/imageButton3"
        android:src="@android:drawable/btn_star_big_on" android:contentDescription="@string/job_button_description"/>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton5"
        android:layout_below="@+id/imageButton2"
        android:layout_marginTop="57dp"
        android:src="@android:drawable/btn_star_big_off" android:contentDescription="@string/forsale_button_description"/>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton3"
        android:layout_alignLeft="@+id/imageButton3"
        android:src="@android:drawable/btn_star_big_on" android:contentDescription="@string/shopping_button_description"/>

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton4"
        android:layout_marginTop="23dp"
        android:layout_toRightOf="@+id/imageButton5"
        android:src="@android:drawable/btn_star_big_off" android:contentDescription="@string/travel_button_description"/>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_alignTop="@+id/imageButton6"
        android:src="@android:drawable/btn_star_big_on" android:contentDescription="@string/misc_button_description"/>

</RelativeLayout>