<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >

    <!-- <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/login"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:text="@string/login_text_box"
            android:onClick="loginUserActivity"
             />
    </LinearLayout> -->

   <Button
       android:id="@+id/btnLogin"
       android:layout_width="202dp"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="38dp"
       android:onClick="loginUserActivity"
       android:text="@string/login_text_box" />

   <Button
       android:id="@+id/btnBrowse"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/btnLogin"
       android:layout_alignRight="@+id/btnLogin"
       android:layout_below="@+id/btnLogin"
       android:layout_marginTop="26dp"
       android:onClick="cityBrowse"
       android:text="@string/browse_button_text" />

   <Button
       android:id="@+id/btnSignUp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/btnBrowse"
       android:layout_alignRight="@+id/btnBrowse"
       android:layout_below="@+id/btnBrowse"
       android:layout_marginTop="24dp"
       android:onClick="createUserActivity"
       android:text="@string/create_user_button_text" />
    
</RelativeLayout>
